---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    -
  Bugfixes:
    - Fixed a crash when trying to edit a machine that uses fuel (#412)
    - Fixed a crash when entering a negative beacon amount (#415)
    - Fixed a fuel migration issue, marking it as invalid when it wasn't

---------------------------------------------------------------------------------------------------
Version: 2.0.11
Date: 19. 11. 2024
  Features:
    - Activating a 'Put into cursor' action on any item button while holding an inserter now whitelists that item
  Bugfixes:
    - Fixed various migration and repair issues (spicy!)

---------------------------------------------------------------------------------------------------
Version: 2.0.10
Date: 17. 11. 2024
  Bugfixes:
    - Fixed that the beacon dialog can't be confirmed (#409)
    - Fixed that hidden planets were still shown (#410)

---------------------------------------------------------------------------------------------------
Version: 2.0.9
Date: 17. 11. 2024
  Changes:
    - Added a warning message when trying to use a recipe in an incompatible location (#393)
  Bugfixes:
    - Fixed that adding the same module, but of different quality would just drop one of them (#392)
    - Fixed that pasting a machine onto another one could leave it in a broken state (#383)
    - Fixed that pasting modules would not handle their quality correctly
    - Fixed a crash when trying to open the utility dialog without an associated player character
    - Fixed some modded beacons being over-permissive with what modules they support
    - Fixed some modded machines not allowing beacons even though they should
    - Fixed that Pyanodon's empty planter box recipe was detected as a barreling recipe (#406)

---------------------------------------------------------------------------------------------------
Version: 2.0.8
Date: 15. 11. 2024