@@ -477,6 +477,7 @@ consume=consume
 
 combinator=Combinator
 put_into_cursor_failed=__1__ can’t be put into the cursor
+inserter_only_filters_items=Inserters can't filter fluids
 inserter_has_no_filters=This inserter can't be filtered
 inserter_filter_limit_reached=This inserter can't have more filters
 no_removal=__1__ can’t be removed
